unpackaged/main/default/objects/dfsle__EOS_Type__c/fields/dfsle__FolderName__c.field-meta.xml
<CustomField>
    <fullName>dfsle__FolderName__c</fullName>
    <description>A field to store the folder name generated during the object mapping process.</description>
    <inlineHelpText>A field to store the folder name generated during the object mapping process.</inlineHelpText>
    <label>Folder Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>