unpackaged/main/default/objects/dfsle__EOS_Type__c/fields/dfsle__IsLegacyFileIt__c.field-meta.xml
<CustomField>
    <fullName>dfsle__IsLegacyFileIt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Previously a Legacy FileIt Row</label>
    <type>Checkbox</type>
</CustomField>