unpackaged/main/default/objects/dfsle__EOS_Type__c/fields/dfsle__Path__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Path__c</fullName>
    <description>A field to store the folder path in SpringCM, generated during the object mapping process within
		Salesforce.</description>
    <inlineHelpText>A field to store the folder path in SpringCM, generated during the object mapping process within
		Salesforce.</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>