unpackaged/main/default/objects/dfsle__EOS_Type__c/fields/dfsle__Variables__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Variables__c</fullName>
    <description>A field to store the variable folder names.</description>
    <inlineHelpText>A field to store the variable folder names.</inlineHelpText>
    <label>Variables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>